[gd_scene load_steps=4 format=3 uid="uid://b23kmeeyw2xl4"]

[ext_resource type="Theme" uid="uid://4g6q0qitk4oc" path="res://resources/themes/default_theme.tres" id="1_jwxxi"]
[ext_resource type="Script" path="res://gui/widgets/volume_slider.gd" id="1_kyl0x"]
[ext_resource type="AudioStream" uid="uid://ck8yg1glcuwmk" path="res://resources/audio/gui/card/blip.ogg" id="3_dqchj"]

[node name="VolumeSlider" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme = ExtResource("1_jwxxi")
script = ExtResource("1_kyl0x")
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "Volume:"

[node name="Slider" type="HSlider" parent="."]
layout_mode = 2
size_flags_horizontal = 3
step = 5.0
value = 50.0

[node name="BlipPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_dqchj")

[connection signal="value_changed" from="Slider" to="." method="_on_slider_value_changed"]
